--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="MYCSS.css">
+    <link rel="stylesheet" href="E:\gitproject\website\style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Flamenco&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,7 +18,7 @@
             <div class="row clearfix">
                 <ul class="main-nav animated slideInDown" id="check-class">
                     <li>
-                        <a href="myhtml.html">Home</a></li>
+                        <a href="#">Home</a></li>
                     <li><a href="# ">About Us</a></li>
                     <li><a href="# ">Drop Your Resume</a></li>
                     <li><a href="# ">Log in</a></li>
